# poll.rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yaml  example.env  heroku.yml  sailfish.toml  spec.yaml  sqlx-data.json
.github/actions/test/: action.yaml
.github/actions/toolchain/: action.yaml
.github/workflows/: build.yaml  ci.yaml  continuous-integration.yaml  test.yaml
conf/: base.yaml  local.yaml  production.yaml
docker/: docker-compose.simulate.production.yaml
migrations/: 20210621094659_create_poll_system.down.sql  20210621094659_create_poll_system.up.sql  20230118143325_initial_db.sql
migrations/2021-06-20-125358_create_voting_system/: up.sql
scripts/: audits.sh  local_cleanup.sh  make_systemd_service.sh  start_dev.sh  start_jaeger.sh  start_mysql.sh  start_postgresql.sh
src/: actions.rs  app.rs  conf.rs  error.rs  irv.rs  lib.rs  main.rs  middleware.rs  model.rs  models.rs  repository.rs  route.rs  schema.rs  service.rs  telemetry.rs  view.rs
src/middleware/: redirect_middleware.rs
src/model/: ballot.rs  item.rs  ranking.rs
src/repository/: ballot.rs  ballot_repository.rs  item.rs  item_repository.rs  ranking.rs  ranking_repository.rs
src/route/: ballot.rs  health.rs  index.rs  login.rs  register.rs
src/service/: ballot.rs  ballot_service.rs  item.rs  item_service.rs  ranking.rs  ranking_service.rs
src/view/: ballot.rs  component.rs  index.rs  item.rs
static/: app.css  ballot.css  ballot.js  home.js
static/template/: ballot.html  best_item.html  index.html
static/templates/: ballot.html  index.html  items_list.html  layout.html  undone_items_list.html
templates/: ballot.stpl  best_item.stpl  flash_messages.stpl  header.stpl  index.html  index.stpl
