[package]
name = "poll"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "3"
dotenv = "0.15"
diesel = { version = "1", features = ["sqlite", "r2d2"] }
handlebars = { version = "4", features = ["dir_source"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
