[package]
name = "poll"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.7"
dotenv = "0.15"
futures = "0.3"
handlebars = { version = "4", features = ["dir_source"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "sqlite"] }
thiserror = "1"
